--- a/Hubitat.indigoPlugin/Contents/Info.plist
+++ b/Hubitat.indigoPlugin/Contents/Info.plist
@@ -3,13 +3,13 @@
 <plist version="1.0">
 <dict>
 	<key>PluginVersion</key>
-	<string>0.2.1</string>
+	<string>0.2.2</string>
 	<key>ServerApiVersion</key>
 	<string>2.0</string>
 	<key>IwsApiVersion</key>
 	<string>1.0.0</string>
 	<key>CFBundleDisplayName</key>
-	<string>Hubitat</string>
+	<string>Hubitat Bridge</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.autologplugin.indigoplugin.hubitat</string>
 	<key>CFBundleVersion</key>
