--- a/Hubitat.indigoPlugin/Contents/Info.plist
+++ b/Hubitat.indigoPlugin/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>PluginVersion</key>
-	<string>0.4.16</string>
+	<string>0.4.19</string>
 	<key>ServerApiVersion</key>
 	<string>2.5</string>
 	<key>IwsApiVersion</key>
@@ -14,7 +14,7 @@
 	<string>com.autologplugin.indigoplugin.hubitat</string>
 	<key>CFBundleVersion</key>
 	<string>1.0.0</string>
-	<key>CFBundleURLTypes</key>s
+	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
 			<key>CFBundleURLName</key>
